--- a/javascript-calculator/style.css
+++ b/javascript-calculator/style.css
@@ -1,51 +1,91 @@
-*, *::before, *::after{
-    box-sizing: border-box;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: normal;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: normal;
 }
-body{
-    padding: 0;
-    margin: 0;
-    background: linear-gradient(to right, #2929cf, #00ff73);
+body {
+  padding: auto;
+  margin: auto;
+  background: linear-gradient(to right, #2929cf, #00ff73);
 }
-.calculator-grid{
+.calculator-grid {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  min-height: 100vh;
+  grid-template-columns: repeat(4, 100px);
+  grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+}
+@media (max-width: 600px) {
+  .calculator-grid {
     display: grid;
     justify-content: center;
     align-content: center;
-    min-height: 100vh;
-    grid-template-columns: repeat(4, 100px);
-    grid-template-rows: minmax(120px, auto)  repeat(5, 100px);
+    min-height: 85vh;
+    grid-template-columns: repeat(4, 65px);
+    grid-template-rows: minmax(70px, auto) repeat(5, 65px);
+  }
 }
 
-.calculator-grid>button{
+.calculator-grid > button {
+  cursor: pointer;
+  background-color: cornsilk;
+  font-size: 2em;
+  border: 1px solid white;
+  outline: none;
+}
+@media (max-width: 600px) {
+  .calculator-grid > button {
     cursor: pointer;
     background-color: cornsilk;
-    font-size: 2em;
-    border: 1px solid white;
+    font-size: 0.75em;
+    border: 0.5px solid white;
     outline: none;
-
+  }
 }
-.span-two{
-    grid-column: span 2;
+#operation {
+  font-size: 1.75em;
 }
-.output{
-    grid-column: 1 / -1;
-    color: white;
-    background-color: rgb(0, 0, 0, .75);
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    padding: 10px;
-    justify-content: space-around;
-    word-wrap: break-word;
-    word-break: break-all;
-}
-
-.output .previous-operand{
-    color: wheat;
+@media (max-width: 600px) {
+  #operation {
     font-size: 1em;
+  }
 }
-.output .current-operand{
+.span-two {
+  grid-column: span 2;
+}
+@media (max-width: 600px) {
+  .span-two {
+    grid-column: span 2;
+  }
+}
+.output {
+  grid-column: 1 / -1;
+  color: white;
+  background-color: rgb(0, 0, 0, 0.75);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 10px;
+  justify-content: space-around;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
+.output .previous-operand {
+  color: wheat;
+  font-size: 1em;
+}
+.output .current-operand {
+  color: white;
+  font-size: 2em;
+}
+@media (max-width: 800px) {
+  .output .current-operand {
     color: white;
-    font-size: 2em;
+    font-size: 0.9em;
+  }
 }
