--- a/style.css
+++ b/style.css
@@ -1,85 +1,91 @@
-table,th,td{
-    border: 1px solid black;
-    
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: normal;
 }
-table{
-    width:50%
+body {
+  padding: auto;
+  margin: auto;
+  background: linear-gradient(to right, #2929cf, #00ff73);
 }
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,500');
-
-
-
-html, body {
-  background-color: #fff;
+.calculator-grid {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  min-height: 100vh;
+  grid-template-columns: repeat(4, 100px);
+  grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+}
+@media (max-width: 600px) {
+  .calculator-grid {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    min-height: 85vh;
+    grid-template-columns: repeat(4, 65px);
+    grid-template-rows: minmax(70px, auto) repeat(5, 65px);
+  }
 }
 
-.form-popup-bg {
-  position:absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+.calculator-grid > button {
+  cursor: pointer;
+  background-color: cornsilk;
+  font-size: 2em;
+  border: 1px solid white;
+  outline: none;
+}
+@media (max-width: 600px) {
+  .calculator-grid > button {
+    cursor: pointer;
+    background-color: cornsilk;
+    font-size: 0.75em;
+    border: 0.5px solid white;
+    outline: none;
+  }
+}
+#operation {
+  font-size: 1.75em;
+}
+@media (max-width: 600px) {
+  #operation {
+    font-size: 1em;
+  }
+}
+.span-two {
+  grid-column: span 2;
+}
+@media (max-width: 600px) {
+  .span-two {
+    grid-column: span 2;
+  }
+}
+.output {
+  grid-column: 1 / -1;
+  color: white;
+  background-color: rgb(0, 0, 0, 0.75);
   display: flex;
   flex-direction: column;
-  align-content: center;
-  justify-content: center;
-}
-.form-popup-bg {
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(94, 110, 141, 0.9);
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
-  -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
-  transition: opacity 0.3s 0s, visibility 0s 0.3s;
-  overflow-y: auto;
-  z-index: 10000;
-}
-.form-popup-bg.isVisible {
-  opacity: 1;
-  visibility: visible;
-  -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
-  -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
-  transition: opacity 0.3s 0s, visibility 0s 0s;
-}
-.form-container {
-    background-color: #2d3638;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-    position:relative;
-  padding: 40px;
-  color: #fff;
-}
-.close-button {
-  background:none;
-  color: #fff;
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  border: solid 1px #fff;
+  align-items: flex-end;
+  padding: 10px;
+  justify-content: space-around;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
-.form-popup-bg:before{
-    content:'';
-    background-color: #fff;
-  opacity: .25;
-  position:absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+.output .previous-operand {
+  color: wheat;
+  font-size: 1em;
 }
-
-
+.output .current-operand {
+  color: white;
+  font-size: 2em;
+}
+@media (max-width: 800px) {
+  .output .current-operand {
+    color: white;
+    font-size: 0.9em;
+  }
+}
